炫彩编程助手/Data/DemoMgr/net简化版/Lib/XCGUI.cs


        [DllImport("xcgui.dll", EntryPoint = "XEle_SetXCTimer", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool SetXCTimer(int hEle, int nIDEvent, int uElapse);

        [DllImport("xcgui.dll", EntryPoint = "XEle_KillXCTimer", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool KillXCTimer(int hEle, int nIDEvent);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetToolTip", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetToolTip(int hEle, string pText);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetToolTip", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetToolTip(int hEle, string pOut, int nOutLen);

        [DllImport("xcgui.dll", EntryPoint = "XEle_PopupToolTip", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void PopupToolTip(int hEle, int x, int y);

        [DllImport("xcgui.dll", EntryPoint = "XEle_AdjustLayoutObject", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void AdjustLayoutObject(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_AdjustLayout", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void AdjustLayout(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_RegEventTest", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool RegEventTest(int nEvent, int pParamType);

    }
    partial class XFont
    {
        [DllImport("xcgui.dll", EntryPoint = "XFont_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int Create(int size);

        [DllImport("xcgui.dll", EntryPoint = "XFont_Create2", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int Create2(string pName, int size, int style);

        [DllImport("xcgui.dll", EntryPoint = "XFont_Create3", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int Create3(xc_font_info_i* pInfo);

        [DllImport("xcgui.dll", EntryPoint = "XFont_CreateEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int CreateEx(LOGFONTW* pFontInfo);

        [DllImport("xcgui.dll", EntryPoint = "XFont_CreateFromHFONT", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int CreateFromHFONT(int hFont);

        [DllImport("xcgui.dll", EntryPoint = "XFont_CreateFromFont", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int CreateFromFont(int pFont);

        [DllImport("xcgui.dll", EntryPoint = "XFont_CreateFromFile", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int CreateFromFile(string pFontFile, int size, int style);

        [DllImport("xcgui.dll", EntryPoint = "XFont_EnableAutoDestroy", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableAutoDestroy(int hFontX, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XFont_GetFont", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetFont(int hFontX);

        [DllImport("xcgui.dll", EntryPoint = "XFont_GetFontInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetFontInfo(int hFontX, xc_font_info_i* pInfo);

        [DllImport("xcgui.dll", EntryPoint = "XFont_AddRef", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void AddRef(int hFontX);

        [DllImport("xcgui.dll", EntryPoint = "XFont_Release", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void Release(int hFontX);

        [DllImport("xcgui.dll", EntryPoint = "XFont_GetRefCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetRefCount(int hFontX);

        [DllImport("xcgui.dll", EntryPoint = "XFont_Destroy", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void Destroy(int hFontX);
    }

    partial class XFrameWnd
    {
        [DllImport("xcgui.dll", EntryPoint = "XFrameWnd_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int Create(int x, int y, int cx, int cy, string pTitle, int hWndParent, int XCStyle);

        [DllImport("xcgui.dll", EntryPoint = "XFrameWnd_CreateEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int CreateEx(int dwExStyle, string lpClassName, string lpWindowName, int dwStyle, int x, int y, int cx, int cy, int hWndParent, int XCStyle);

        [DllImport("xcgui.dll", EntryPoint = "XFrameWnd_GetLayoutAreaRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetLayoutAreaRect(int hWindow, RECT* pRect);

        [DllImport("xcgui.dll", EntryPoint = "XFrameWnd_SetView", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetView(int hWindow, int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XFrameWnd_SetPaneSplitBarColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetPaneSplitBarColor(int hWindow, int color, byte alpha);

        [DllImport("xcgui.dll", EntryPoint = "XFrameWnd_SaveLayoutToFile", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool SaveLayoutToFile(int hWindow, string pFileName);

        [DllImport("xcgui.dll", EntryPoint = "XFrameWnd_LoadLayoutFile", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool LoadLayoutFile(int hWindow, int aPaneList, int nEleCount, string pFileName);

        [DllImport("xcgui.dll", EntryPoint = "XFrameWnd_AddPane", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool AddPane(int hWindow, int hPaneDest, int hPaneNew, int align);

        [DllImport("xcgui.dll", EntryPoint = "XFrameWnd_MergePane", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool MergePane(int hWindow, int hPaneDest, int hPaneNew);

    }
    partial class XImage
    {
        [DllImport("xcgui.dll", EntryPoint = "XImage_LoadFile", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadFile(string pImageName, bool bStretch);

        [DllImport("xcgui.dll", EntryPoint = "XImage_LoadFileAdaptive", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadFileAdaptive(string pImageName, int leftSize, int topSize, int rightSize, int bottomSize);

        [DllImport("xcgui.dll", EntryPoint = "XImage_LoadFileRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadFileRect(string pImageName, int x, int y, int cx, int cy);

        [DllImport("xcgui.dll", EntryPoint = "XImage_LoadResAdaptive", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadResAdaptive(int id, string pType, int leftSize, int topSize, int rightSize, int bottomSize);

        [DllImport("xcgui.dll", EntryPoint = "XImage_LoadRes", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadRes(int id, string pType, bool bStretch);

        [DllImport("xcgui.dll", EntryPoint = "XImage_LoadZip", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadZip(string pZipFileName, string pImageName, string pPassword, bool bStretch);

        [DllImport("xcgui.dll", EntryPoint = "XImage_LoadZipAdaptive", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadZipAdaptive(string pZipFileName, string pImageName, string pPassword, int x1, int x2, int y1, int y2);

        [DllImport("xcgui.dll", EntryPoint = "XImage_LoadZipRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadZipRect(string pZipFileName, string pImageName, string pPassword, int x, int y, int cx, int cy);

        [DllImport("xcgui.dll", EntryPoint = "XImage_LoadMemory", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadMemory(int pBuffer, int nSize, bool bStretch);

        [DllImport("xcgui.dll", EntryPoint = "XImage_LoadMemoryRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadMemoryRect(int pBuffer, int nSize, int x, int y, int cx, int cy, bool bStretch);

        [DllImport("xcgui.dll", EntryPoint = "XImage_LoadMemoryAdaptive", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadMemoryAdaptive(int pBuffer, int nSize, int leftSize, int topSize, int rightSize, int bottomSize);

        [DllImport("xcgui.dll", EntryPoint = "XImage_LoadFromImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadFromImage(int pImage);

        [DllImport("xcgui.dll", EntryPoint = "XImage_LoadFileFromExtractIcon", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadFileFromExtractIcon(string pImageName);

        [DllImport("xcgui.dll", EntryPoint = "XImage_LoadFileFromHICON", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadFileFromHICON(int hIcon);

        [DllImport("xcgui.dll", EntryPoint = "XImage_LoadFileFromHBITMAP", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadFileFromHBITMAP(int hBitmap);

        [DllImport("xcgui.dll", EntryPoint = "XImage_IsStretch", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsStretch(int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XImage_IsAdaptive", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsAdaptive(int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XImage_IsTile", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsTile(int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XImage_SetDrawType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool SetDrawType(int hImage, int nType);
